--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,7 +50,7 @@ stages:
   - job: Build
     displayName: Build Docker Image
     pool:
-      vmImage: ubuntu-latest
+      vmImage: GuiPc
     steps:
     - task: Docker@2
       inputs:
