--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ stages:
         Python311:
           python.version: '3.11'
     pool:
-      vmImage: ubuntu-latest
+      vmImage: GuiPc
     steps:
     - task: UsePythonVersion@0
       inputs:
