--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ stages:
         Python311:
           python.version: '3.11'
     pool:
-      vmImage: GuiPc
+      name: GuiPc
     steps:
     - task: UsePythonVersion@0
       inputs:
@@ -50,7 +50,7 @@ stages:
   - job: Build
     displayName: Build Docker Image
     pool:
-      vmImage: GuiPc
+      name: GuiPc
     steps:
     - task: Docker@2
       inputs:
