--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,6 +62,7 @@ stages:
     - script: |
         tar --version
         wget https://cli.artifactscan.cloudone.trendmicro.com/tmas-cli/latest/tmas-cli_Linux_x86_64.tar.gz
+        export DOCKER_BUILDKIT=1
       displayName: Get Latest Version of TMAS
 
     - task: ExtractFiles@1
