--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,6 +53,8 @@ stages:
         repository: $(repository)
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
+      env:
+        DOCKER_BUILDKIT: 1
 
     - script: |
         tar --version
