Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ resources:
 - repo: self
 
 variables:
-  repository: 'repositoryURI'
+  repository: 'gui0765/python-flask-api'
   tag: '$(Build.BuildId)'
   imageName: 'imageName'
 
